--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "json2csv": "^6.0.0-alpha.2",
     "pg": "^8.16.3"
   },
   "devDependencies": {
