--- a/packages/web/Dockerfile
+++ b/packages/web/Dockerfile
@@ -15,6 +15,9 @@ FROM nginx:stable-alpine
 # Copy the built files from the 'build' stage
 COPY --from=build /app/dist /usr/share/nginx/html
 
+# NEW: Copy our custom Nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 # Expose port 80 for the web server
 EXPOSE 80
 
