--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     ports:
       - "3001:3001"
     env_file:
-      - ./packages/api/.env 
+      - ./packages/api/.env.production 
 
   # --- Frontend Service ---
   frontend:
@@ -42,7 +42,7 @@ services:
     depends_on:
       - backend 
     ports:
-      - "8080:80"
+      - "8090:80"
 
 # Define a named volume to persist the PostgreSQL data
 volumes:
