feat: Implement database backup and restore feature
This commit introduces a comprehensive backup and restore system for the application's PostgreSQL database, enhancing data safety and providing administrators with disaster recovery tools.

The implementation is divided into three main parts:

1.  **Docker Backup Service:**
    - Adds a new `backup` service to `docker-compose.yml` that runs on a daily schedule.
    - Includes a `backup.sh` script to perform `pg_dump` and manage file retention based on an environment variable.
    - Mounts a local `./backups` directory for persistent storage.

2.  **Backend API:**
    - Creates new secure, admin-only endpoints under `/api/backups` for listing, creating, restoring, and deleting backup files.
    - Updates the backend `Dockerfile` and `docker-compose.yml` to allow the API container to execute `docker exec` commands on the backup container, enabling on-demand backups.

3.  **Frontend UI:**
    - Adds a "Backup & Restore" tab to the Settings page for administrators.
    - Implements a new `BackupSettings.jsx` component to display available backups and provide controls for on-demand backups, restores, and deletions.
    - Allows configuration of backup retention days directly from the UI.

--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -7,3 +7,7 @@ DB_NAME=forson_business_suite
 
 # JWT Secret for Authentication
 JWT_SECRET=your_jwt_secret_here
+
+# --- NEW: Backup Configuration ---
+# The number of days to keep backup files
+BACKUP_RETENTION_DAYS=7
