--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,32 @@ services:
     ports:
       - "8090:80"
 
+  # --- NEW: Backup Service ---
+  backup:
+    image: postgres:15-alpine # Use the same postgres image for pg_dump
+    container_name: forson_backup
+    restart: always
+    depends_on:
+      - db
+    volumes:
+      - ./backups:/backups # Mount the local backups folder into the container
+      - ./backup:/docker-entrypoint-initdb.d # Mount the script directory
+    environment:
+      - DB_HOST=db
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - BACKUP_PATH=/backups
+      - BACKUP_RETENTION_DAYS=${BACKUP_RETENTION_DAYS:-7} # Default to 7 days if not set
+    # This command runs the backup script every 24 hours (86400 seconds)
+    command: >
+      bash -c "while true; do
+        /docker-entrypoint-initdb.d/backup.sh;
+        sleep 86400;
+      done"
+    env_file:
+      - ./packages/api/.env.production
+
 # Define a named volume to persist the PostgreSQL data
 volumes:
   postgres_data:
