--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -17,6 +17,8 @@
     "express": "^4.21.2",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "papaparse": "^5.4.1",
     "pg": "^8.16.3"
   },
   "devDependencies": {
