--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -11,3 +11,8 @@ JWT_SECRET=your_jwt_secret_here
 # --- NEW: Backup Configuration ---
 # The number of days to keep backup files
 BACKUP_RETENTION_DAYS=7
+
+
+# --- NEW: Meilisearch Configuration ---
+MEILISEARCH_HOST=http://meilisearch:7700
+MEILISEARCH_MASTER_KEY=your_strong_meilisearch_master_key
