--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
+    "meilisearch": "^0.36.0",
     "multer": "^1.4.5-lts.1",
     "papaparse": "^5.4.1",
     "pg": "^8.16.3"
