cleanup: removed unnecessary .env files and centralized the .env file in the project root
- Updated docker-compose files
- Saved COMMANDS.md for setting up commands.
- Deleted tree_output.txt

--- a/.env.example
+++ b/.env.example
@@ -6,13 +6,11 @@ DB_PASSWORD=your_secret_password_here
 DB_NAME=forson_business_suite
 
 # JWT Secret for Authentication
-JWT_SECRET=your_jwt_secret_here
+JWT_SECRET=a_very_long_and_random_string_for_security
 
-# --- NEW: Backup Configuration ---
-# The number of days to keep backup files
+# Backup Configuration
 BACKUP_RETENTION_DAYS=7
 
-
-# --- NEW: Meilisearch Configuration ---
+# Meilisearch Configuration
 MEILISEARCH_HOST=http://meilisearch:7700
-MEILISEARCH_MASTER_KEY=your_strong_meilisearch_master_key
+MEILISEARCH_MASTER_KEY=another_strong_and_secret_key
