fix(backup): Resolve command execution errors for backup and restore
This commit fixes the `500 Internal Server Error` that occurred when creating or restoring backups.

The root cause was that the API container was missing the necessary PostgreSQL command-line tools (`pg_dump`, `psql`). This resulted in a "command not found" error when the backup routes attempted to execute these commands.

The fix involves updating the `packages/api/Dockerfile` to install the `postgresql-client` package, making these essential tools available within the container's environment.

**Current Status:**
- The "Backup Now" feature is now fully functional and successfully creates `.sql.gz` backup files in the shared volume.
- The "Restore" feature now executes without throwing a `500` error in the API.

**Known Issue:**
- Despite the successful execution of the restore command, manual testing has shown that the database state is not correctly reverted. For example, items deleted after a backup was created are not restored. This indicates a potential issue with how the `psql` command is being executed or how it interacts with the running database service. This will require further investigation.

--- a/packages/api/Dockerfile
+++ b/packages/api/Dockerfile
@@ -1,20 +1,23 @@
 # Use an official Node.js runtime as a parent image
 FROM node:18-alpine
 
+# Install PostgreSQL client for pg_dump and psql commands
+RUN apk add --no-cache postgresql-client
+
 # Set the working directory in the container
 WORKDIR /usr/src/app
 
-# Copy package.json and package-lock.json to leverage Docker cache
+# Copy package.json and package-lock.json
 COPY package*.json ./
 
 # Install app dependencies
-RUN npm install
+RUN npm ci
 
-# Bundle app source
+# Copy the rest of the application's code
 COPY . .
 
-# Your app binds to port 3001, so expose it
+# The app binds to port 3001
 EXPOSE 3001
 
-# Define the command to run your app
-CMD [ "node", "index.js" ]
+# Command to run the application
+CMD [ "npm", "run", "start" ]
