--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "start": "nodemon index.js",
+  "dev": "nodemon --legacy-watch index.js"
   },
   "keywords": [],
   "author": "",
