--- a/packages/web/Dockerfile
+++ b/packages/web/Dockerfile
@@ -1,25 +1,56 @@
-# STAGE 1: Build the React application
-FROM node:18-alpine as build
+# Build stage
+FROM node:20-alpine AS builder
 
+# Set working directory
 WORKDIR /app
 
+# Copy package files for better cache utilization
 COPY package*.json ./
-RUN npm install
 
+# Install dependencies with exact versions
+RUN npm ci
+
+# Copy source code
 COPY . .
-RUN npm run build
 
-# STAGE 2: Serve the built application with Nginx
+# Run tests and build
+RUN npm run test && \
+    npm run build
+
+# Production stage
 FROM nginx:stable-alpine
 
-# Copy the built files from the 'build' stage
-COPY --from=build /app/dist /usr/share/nginx/html
+# Install security updates
+RUN apk update && \
+    apk upgrade --no-cache
 
-# NEW: Copy our custom Nginx configuration
+# Create non-root user
+RUN addgroup -S appgroup && \
+    adduser -S appuser -G appgroup
+
+# Copy built files from builder
+COPY --from=builder /app/dist /usr/share/nginx/html
+
+# Copy nginx configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Expose port 80 for the web server
+# Set correct permissions
+RUN chown -R appuser:appgroup /usr/share/nginx/html && \
+    chown -R appuser:appgroup /var/cache/nginx && \
+    chown -R appuser:appgroup /var/log/nginx && \
+    chown -R appuser:appgroup /etc/nginx/conf.d && \
+    touch /var/run/nginx.pid && \
+    chown -R appuser:appgroup /var/run/nginx.pid
+
+# Switch to non-root user
+USER appuser
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=5s --start-period=5s --retries=3 \
+    CMD wget --no-verbose --tries=1 --spider http://localhost:80/health || exit 1
+
+# Expose port 80
 EXPOSE 80
 
-# Nginx will start automatically when the container runs
+# Start Nginx
 CMD ["nginx", "-g", "daemon off;"]
