feat: Refactor application handling to use normalized vehicle make, model, and engine tables
- Updated SQL queries in dataUtilsRoutes, partApplicationRoutes, and partRoutes to fetch vehicle make, model, and engine data from new tables.
- Modified the ApplicationForm component to handle make, model, and engine selection with improved state management and API calls.
- Enhanced PartApplicationManager to link applications with vehicle makes, models, and engines, ensuring proper data flow and validation.
- Implemented database migrations to create new tables for vehicle make, model, and engine, and migrated existing application data to the new schema.
- Adjusted the application view to reflect the new structure and removed deprecated string columns from the application table.
- Updated Dockerfile to streamline the build process and ensure proper application deployment.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,10 @@ services:
   # --- Backend API Service ---
   backend:
     container_name: forson_backend
-    image: kentonel/forson-backend:latest 
+    build:
+      context: ./packages/api
+      dockerfile: Dockerfile
+    image: kentonel/forson-backend:latest
     restart: always
     depends_on:
       - db
@@ -42,6 +45,9 @@ services:
   # --- Frontend Service ---
   frontend:
     container_name: forson_frontend
+    build:
+      context: ./packages/web
+      dockerfile: Dockerfile
     image: kentonel/forson-frontend:latest
     restart: always
     depends_on:
