--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,6 +3,7 @@
 services:
   backend:
     container_name: forson_backend_dev
+    user: root
     build:
       context: ./packages/api
       dockerfile: Dockerfile
@@ -38,6 +39,7 @@ services:
       - CHOKIDAR_USEPOLLING=true
       - CHOKIDAR_INTERVAL=100
       - NPM_CONFIG_LOGLEVEL=error
+      - VITE_PROXY_TARGET=http://backend:3001
     ports:
       - "5173:5173"
     depends_on:
