--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -21,6 +21,7 @@
     "meilisearch": "^0.36.0",
     "multer": "^1.4.5-lts.1",
     "papaparse": "^5.4.1",
+    "pdf-creator-node": "^2.3.5",
     "pg": "^8.16.3"
   },
   "devDependencies": {
