--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -20,9 +20,10 @@
     "jsonwebtoken": "^9.0.2",
     "meilisearch": "^0.36.0",
     "multer": "^1.4.5-lts.1",
+    "mustache": "^4.2.0",
     "papaparse": "^5.4.1",
-    "pdf-creator-node": "^2.3.5",
-    "pg": "^8.16.3"
+  "pg": "^8.16.3",
+  "puppeteer": "^23.6.0"
   },
   "devDependencies": {
     "jest": "^30.1.0",
