--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "dev": "nodemon --legacy-watch index.js"
+  "dev": "nodemon --legacy-watch index.js",
+  "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
@@ -26,7 +27,10 @@
   "puppeteer": "^23.6.0"
   },
   "devDependencies": {
-    "jest": "^30.1.0",
-    "nodemon": "^3.1.10"
+  "jest": "^30.1.0",
+  "nodemon": "^3.1.10",
+  "eslint": "^9.30.1",
+  "@eslint/js": "^9.30.1",
+  "globals": "^16.3.0"
   }
 }
