--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "start": "nodemon index.js",
-  "dev": "nodemon --legacy-watch index.js",
-  "lint": "eslint ."
+    "dev": "nodemon --legacy-watch index.js",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
