--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -24,14 +24,15 @@
     "multer": "^1.4.5-lts.1",
     "mustache": "^4.2.0",
     "papaparse": "^5.4.1",
-  "pg": "^8.16.3",
-  "puppeteer": "^23.6.0"
+    "pg": "^8.16.3",
+    "puppeteer": "^23.6.0"
   },
   "devDependencies": {
-  "jest": "^30.1.0",
-  "nodemon": "^3.1.10",
-  "eslint": "^9.30.1",
-  "@eslint/js": "^9.30.1",
-  "globals": "^16.3.0"
+    "@eslint/js": "^9.30.1",
+    "eslint": "^9.30.1",
+    "globals": "^16.3.0",
+    "jest": "^30.1.0",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4"
   }
 }
