refactor: update package.json for workspaces and scripts
chore: modify ESLint configuration for API package

test: enhance Jest configuration and setup for API tests

fix: streamline admin account creation logic in setupRoutes

test: add mock implementations for database queries in documents tests

style: adjust ESLint rules for web package

chore: add preview script to web package.json

test: add smoke test for API package

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "forson-business-suite",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "lint": "npm --prefix packages/web run lint && npm --prefix packages/api run lint",
-    "lint:web": "npm --prefix packages/web run lint",
-    "lint:api": "npm --prefix packages/api run lint"
-  }
+	"name": "forson-business-suite",
+	"private": true,
+	"workspaces": [
+		"packages/*"
+	],
+	"scripts": {
+		"test": "npm run -w packages/api test"
+	}
 }
