--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,11 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch",
+  "test": "jest --config jest.config.js",
     "start": "nodemon index.js",
-    "dev": "nodemon --legacy-watch index.js",
-    "lint": "eslint ."
+    "dev": "nodemon --legacy-watch index.js"
   },
   "keywords": [],
   "author": "",
@@ -24,15 +22,12 @@
     "multer": "^1.4.5-lts.1",
     "mustache": "^4.2.0",
     "papaparse": "^5.4.1",
-    "pg": "^8.16.3",
-    "puppeteer": "^23.6.0"
+  "pg": "^8.16.3",
+  "puppeteer": "^23.6.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.30.1",
-    "eslint": "^9.30.1",
-    "globals": "^16.3.0",
     "jest": "^30.1.0",
-    "nodemon": "^3.1.10",
-    "supertest": "^7.1.4"
+    "supertest": "^7.0.0",
+    "nodemon": "^3.1.10"
   }
 }
