--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "preview": "vite preview",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "test": "echo 'No tests for web'"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.7",
