feat(scripts): add lint script to package.json for API and root

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"packages/*"
 	],
 	"scripts": {
-		"test": "npm run -w packages/api test"
+		"test": "npm run -w packages/api test",
+		"lint": "npm run -w packages/api lint"
 	}
 }
