--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,11 +44,11 @@ jobs:
             packages/web/package-lock.json
           
       - name: Install API dependencies
-        run: npm ci
+        run: npm install
         working-directory: packages/api
 
       - name: Install Web dependencies
-        run: npm ci
+        run: npm install
         working-directory: packages/web
           
       - name: Run API ESLint
