--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,7 +7,10 @@
   "test": "jest --config jest.config.js",
   "lint": "eslint .",
     "start": "nodemon index.js",
-    "dev": "nodemon --legacy-watch index.js"
+    "dev": "nodemon --legacy-watch index.js",
+    "migrate": "node scripts/migrate.js",
+    "migrate:status": "node scripts/migrate.js status",
+    "migrate:verify": "node scripts/migrate.js verify"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +27,7 @@
     "mustache": "^4.2.0",
     "papaparse": "^5.4.1",
   "pg": "^8.16.3",
+  "yargs": "^17.7.2",
   "puppeteer": "^23.6.0"
   },
   "devDependencies": {
