refactor(docker): simplify environment variable declarations and remove unused deploy configurations

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -22,11 +22,6 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-    deploy:
-      resources:
-        limits:
-          cpus: '1'
-          memory: 1G
     logging: *default-logging
 
   meilisearch:
@@ -34,9 +29,9 @@ services:
     container_name: forson_meilisearch
     restart: unless-stopped
     environment:
-      - MEILI_MASTER_KEY=${MEILISEARCH_MASTER_KEY}
-      - MEILI_NO_ANALYTICS=true
-      - MEILI_ENV=production
+      MEILI_MASTER_KEY: ${MEILISEARCH_MASTER_KEY}
+      MEILI_NO_ANALYTICS: "true"
+      MEILI_ENV: production
     volumes:
       - meili_data:/meili_data
     ports:
@@ -46,15 +41,11 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-    deploy:
-      resources:
-        limits:
-          cpus: '0.5'
-          memory: 512M
     logging: *default-logging
 
   backend:
     image: ${DOCKER_REGISTRY:-kentonel}/forson-backend:${TAG:-latest}
+    container_name: forson_backend
     restart: unless-stopped
     depends_on:
       db:
@@ -69,20 +60,11 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-    deploy:
-      replicas: 2
-      update_config:
-        order: start-first
-        failure_action: rollback
-        delay: 10s
-      resources:
-        limits:
-          cpus: '0.5'
-          memory: 512M
     logging: *default-logging
 
   frontend:
     image: ${DOCKER_REGISTRY:-kentonel}/forson-frontend:${TAG:-latest}
+    container_name: forson_frontend
     restart: unless-stopped
     depends_on:
       - backend
@@ -97,16 +79,6 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-    deploy:
-      replicas: 2
-      update_config:
-        order: start-first
-        failure_action: rollback
-        delay: 10s
-      resources:
-        limits:
-          cpus: '0.2'
-          memory: 256M
     logging: *default-logging
 
   backup:
@@ -119,23 +91,17 @@ services:
       - backup_data:/backups
       - ./backup:/docker-entrypoint-initdb.d:ro
     environment:
-      - DB_HOST=db
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USER}
-      - BACKUP_PATH=/backups
-      - BACKUP_RETENTION_DAYS=${BACKUP_RETENTION_DAYS:-7}
-    secrets:
-      - db_password
+      DB_HOST: db
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      BACKUP_PATH: /backups
+      BACKUP_RETENTION_DAYS: ${BACKUP_RETENTION_DAYS:-7}
     healthcheck:
       test: ["CMD", "test", "-d", "/backups"]
       interval: 1h
       timeout: 10s
       retries: 3
-    deploy:
-      resources:
-        limits:
-          cpus: '0.2'
-          memory: 256M
     logging: *default-logging
 
 volumes:
@@ -145,11 +111,3 @@ volumes:
     name: forson_meili_data
   backup_data:
     name: forson_backup_data
-
-secrets:
-  db_password:
-    file: ./secrets/db_password.txt
-  meili_key:
-    file: ./secrets/meili_key.txt
-  jwt_secret:
-    file: ./secrets/jwt_secret.txt
