--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -16,7 +16,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
-      - "127.0.0.1:5432:5432"  # Only accessible locally
+      - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USER}"]
       interval: 10s
@@ -25,7 +25,7 @@ services:
     logging: *default-logging
 
   meilisearch:
-    image: getmeili/meilisearch:v1.3
+    image: getmeili/meilisearch:latest
     container_name: forson_meilisearch
     restart: unless-stopped
     environment:
@@ -35,12 +35,7 @@ services:
     volumes:
       - meili_data:/meili_data
     ports:
-      - "127.0.0.1:7700:7700"  # Only accessible locally
-    healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--spider", "http://localhost:7700/health"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - "7700:7700"
     logging: *default-logging
 
   backend:
@@ -48,13 +43,13 @@ services:
     container_name: forson_backend
     restart: unless-stopped
     depends_on:
-      db:
-        condition: service_healthy
-      meilisearch:
-        condition: service_healthy
+      - db
+      - meilisearch
     env_file: .env
     environment:
       NODE_ENV: production
+    ports:
+      - "3001:3001"
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--spider", "http://localhost:3001/health"]
       interval: 30s
@@ -69,8 +64,7 @@ services:
     depends_on:
       - backend
     ports:
-      - "80:80"
-      - "443:443"
+      - "8090:80"
     volumes:
       - ./nginx/ssl:/etc/nginx/ssl:ro
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
