fix(docker): update MeiliSearch image version and improve Nginx proxy settings

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -3,6 +3,14 @@ server {
     listen [::]:80;
     server_name localhost;
 
+    # Use Docker embedded DNS and re-resolve periodically
+    resolver 127.0.0.11 valid=10s ipv6=off;
+    resolver_timeout 5s;
+
+    # Defer DNS resolution to request time (avoids startup failures)
+    set $api_upstream http://backend:3001;
+    set $meili_upstream http://meilisearch:7700;
+
     # Health check endpoint
     location /health {
         access_log off;
@@ -17,7 +25,7 @@ server {
 
     # API proxy
     location /api {
-        proxy_pass http://backend:3001;
+        proxy_pass $api_upstream;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -28,14 +36,14 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
 
         # Timeouts
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
+        proxy_connect_timeout 30s;
+        proxy_send_timeout 180s;
+        proxy_read_timeout 180s;
     }
 
     # Meilisearch proxy (if needed)
     location /search {
-        proxy_pass http://meilisearch:7700;
+        proxy_pass $meili_upstream;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
