--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -25,7 +25,7 @@ services:
     logging: *default-logging
 
   meilisearch:
-    image: getmeili/meilisearch:latest
+    image: getmeili/meilisearch:v1.3.5
     container_name: forson_meilisearch
     restart: unless-stopped
     environment:
@@ -105,3 +105,7 @@ volumes:
     name: forson_meili_data
   backup_data:
     name: forson_backup_data
+
+networks:
+  default:
+    name: forson_network
