feat: set timezone to Asia/Manila in database configuration and docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     environment:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: forson_business_suite
+      TZ: Asia/Manila
     volumes:
       - postgres_data:/var/lib/postgresql/data 
     ports:
