--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
 	"scripts": {
 		"test": "npm run -w packages/api test",
 		"lint": "npm run -w packages/api lint"
+	},
+	"dependencies": {
+		"date-fns": "^4.1.0",
+		"date-fns-tz": "^3.2.0"
 	}
 }
