feat: set timezone to Asia/Manila in Docker configurations and ensure date-fns packages are installed in web Dockerfile

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,6 +13,7 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: forson_business_suite
       POSTGRES_USER: ${DB_USER}
+      TZ: Asia/Manila
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
