feat: add edit functionality for Goods Receipts with permission checks and UI updates

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -54,8 +54,8 @@ services:
     restart: unless-stopped
 
 networks:
-  forson_business_suite:
-    external: true
+  default:
+    name: forson_business_suite
 
 volumes:
   backend_node_modules:
