feat: Implement Payment Method Settings and Split Payment Modal
- Added PaymentMethodSettings component for managing payment methods.
- Integrated form for creating and editing payment methods with validation rules.
- Implemented drag-and-drop functionality for reordering payment methods.
- Created SplitPaymentModal for handling split payments with dynamic payment lines.
- Added validation for payment entries and auto-allocation of remaining amounts.
- Developed a test script to verify payment methods functionality and API endpoints.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -25,10 +25,12 @@ services:
       - ./packages/api:/usr/src/app
       - backend_node_modules:/usr/src/app/node_modules
       - ./backups:/backups
+      - ./database:/database
     environment:
       - NODE_ENV=development
       - CHOKIDAR_USEPOLLING=true
       - CHOKIDAR_INTERVAL=100
+      - MIGRATIONS_DIR=/database/migrations
     env_file:
       - .env
 
