feat(meilisearch): Enhance configuration and health check endpoints with retry logic and validation

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,21 @@ BACKUP_RETENTION_DAYS=7
 # Meilisearch Configuration
 MEILISEARCH_HOST=http://meilisearch:7700
 MEILISEARCH_MASTER_KEY=another_strong_and_secret_key
+
+# --- Meilisearch Advanced Configuration ---
+# Set the environment: development, staging, or production
+NODE_ENV=development
+
+# Disable Meilisearch listeners (set to true to disable for debugging)
+DISABLE_MEILI_LISTENERS=false
+
+# Retry logic for Meilisearch setup (optional, defaults shown)
+MEILI_SETUP_MAX_RETRIES=4
+MEILI_SETUP_RETRY_DELAY=200
+
+# Typo tolerance configuration (optional, defaults shown)
+MEILI_TYPO_ENABLED=true
+MEILI_TYPO_MIN_WORD_SIZE=4
+MEILI_TYPO_MIN_WORD_SIZE_TWO=8
+
+# See MEILISEARCH_CONFIG.md for more details on these options and recommended values for each environment.
